fix(ui): :lipstick: Add scrollbar gutter

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scrollbar-gutter: stable;
+}
 body {
-	@apply font-sans w-full max-w-full text-neutral-700;
+  @apply font-sans w-full max-w-full text-neutral-700;
+  scrollbar-gutter: stable;
 }
